Added not condensed version of Barlow font

--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -4,7 +4,8 @@
 // Variables
 :root {
     // Fonts        
-    --sans-serif-font: "Barlow Condensed", Arial, Helvetica, sans-serif;
+    --sans-serif-font: "Barlow", Arial, Helvetica, sans-serif;
+    --condensed-font: "Barlow Condensed", Arial, Helvetica, sans-serif;
     --serif-font: Bellefair, "Droid Serif", Georgia, "Palatino Linotype", serif;
 
     // Text sizes
