--- a/sass/layout/_home.scss
+++ b/sass/layout/_home.scss
@@ -10,6 +10,7 @@
     }
     h2 {
         font-size: var(--highlight-text);
+        font-family: var(--condensed-font);
         letter-spacing: var(--highlight-letter-spacing);
         text-transform: uppercase;
         span {
