--- a/sass/typo/_font-face.scss
+++ b/sass/typo/_font-face.scss
@@ -9,6 +9,12 @@
     font-style: normal;
 }
 @font-face {
+    font-family: "Barlow";
+    src: url("fonts/Barlow-Regular.woff2") format("woff2");
+    font-weight: normal;
+    font-style: normal;
+}
+@font-face {
     font-family: "Barlow Condensed";
     src: url("fonts/BarlowCondensed-Regular.woff2") format("woff2");
     font-weight: normal;
