--- a/sass/layout/_menu.scss
+++ b/sass/layout/_menu.scss
@@ -7,6 +7,7 @@
     font-size: var(--menu-text);
     line-height: normal;
     letter-spacing: var(--menu-letter-spacing);
+    font-family: var(--condensed-font);
     color: var(--secondary-colour);
     background: var(--secondary-background);
     text-transform: uppercase;
