--- a/sass/layout/_menu.scss
+++ b/sass/layout/_menu.scss
@@ -48,6 +48,37 @@
             }
         }
     }
+    @include css-media-queries ($below-breakpoint: horizontal-menu) {
+        .js & {
+            @include css-visually-hidden;
+            &.active {
+                width: initial;
+                height: initial;
+                margin: 0;
+                overflow: initial;
+                clip-path: initial;
+                top: 0;
+                right: 0;
+                bottom: 0;
+                left: calc(121 / 375 * 100vw);
+                z-index: 1;
+            }
+            ul {
+                margin-top: 11.8rem;
+            }
+            .close-menu {
+                border: none;
+                position: absolute;
+                top: 3.395rem;
+                right: 2.645rem;
+                z-index: 2;
+                g {
+                    fill: var(--primary-colour);
+                    fill-rule: evenodd;
+                }
+            }
+        }
+    }
     @include css-media-queries ($from-breakpoint: horizontal-menu, $below-breakpoint: wide-menu) {
         ul {
             counter-reset: initial;
