Added "font-display: swap" to each @font-face rule

--- a/sass/typo/_font-face.scss
+++ b/sass/typo/_font-face.scss
@@ -7,22 +7,26 @@
     src: url("fonts/Bellefair-Regular.woff2") format("woff2");
     font-weight: normal;
     font-style: normal;
+    font-display: swap;
 }
 @font-face {
     font-family: "Barlow";
     src: url("fonts/Barlow-Regular.woff2") format("woff2");
     font-weight: normal;
     font-style: normal;
+    font-display: swap;
 }
 @font-face {
     font-family: "Barlow Condensed";
     src: url("fonts/BarlowCondensed-Regular.woff2") format("woff2");
     font-weight: normal;
     font-style: normal;
+    font-display: swap;
 }
 @font-face {
     font-family: "Barlow Condensed";
     src: url("fonts/BarlowCondensed-Bold.woff2") format("woff2");
     font-weight: bold;
     font-style: normal;
+    font-display: swap;
 }
