--- a/sass/layout/_layout.scss
+++ b/sass/layout/_layout.scss
@@ -41,7 +41,7 @@ body {
             ". ." auto
             "content content" 1fr
             / 4.8rem 1fr;
-        gap: normal 4rem;
+        gap: 4rem;
         padding: 0 0 6.2rem 3.85rem;
         &.home {
             background-image: url("images/background-home-tablet.jpg");
