--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -48,13 +48,15 @@
         // Text sizes
         --body-text: 1.6rem;
         --body-line-height: calc(2.8 / 1.6);
+        --article-title-text: 2rem;
+        --article-title-letter-spacing: .338rem;
         // --definition-text: 1.4rem;
         // --definition-letter-spacing: .235rem;
         // --value-text: 2.8rem;
         --highlight-text: 2rem;
         --highlight-letter-spacing: .338rem;
         // --title-medium-text: 3.2rem;
-        // --title-large-text: 5.6rem;
+        --title-large-text: 8rem;
         // --title-big-text: 10rem;
         --title-huge-text: 15rem;
         --title-huge-line-height: 1;
