--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -11,7 +11,10 @@
         horizontal-menu: 600,
         desktop: 800,
         wide-menu: 997,
-        multicol-home-content: 1120
+        multicol-home-content: 1120,
+        multicol-article: 1182,
+        wide-destination-multicol-article: 1327,
+        wide-multicol-stats: 1390
     )
     // Add the enabled browser support to take into account here if different from the default browser enabled support
     // Add the minimal browser version to take into account here if different from the default browser support
