--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -50,9 +50,6 @@
         --body-line-height: calc(2.8 / 1.6);
         --article-title-text: 2rem;
         --article-title-letter-spacing: .338rem;
-        // --definition-text: 1.4rem;
-        // --definition-letter-spacing: .235rem;
-        // --value-text: 2.8rem;
         --highlight-text: 2rem;
         --highlight-letter-spacing: .338rem;
         // --title-medium-text: 3.2rem;
@@ -65,13 +62,12 @@
         // Text sizes
         --body-text: 1.8rem;
         --body-line-height: calc(3.2 / 1.8);
-        // --definition-text: 1.4rem;
-        // --definition-letter-spacing: .235rem;
-        // --value-text: 2.8rem;
+        --article-title-text: 2.8rem;
+        --article-title-letter-spacing: .472rem;
         --highlight-text: 2.8rem;
         --highlight-letter-spacing: .475rem;
         // --title-medium-text: 3.2rem;
-        // --title-large-text: 5.6rem;
+        --title-large-text: 10rem;
         // --title-big-text: 10rem;
     }
 }
