Styled crew page adaptations on small screens

--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -15,6 +15,7 @@
     --menu-letter-spacing: .27rem;
     --article-title-text: 1.6rem;
     --article-title-letter-spacing: .27rem;
+    --article-subtitle-text: 2.4rem;
     --definition-text: 1.4rem;
     --definition-letter-spacing: .235rem;
     --value-text: 2.8rem;
@@ -36,6 +37,7 @@
     --secondary-colour-inactive-border: rgb(255, 255, 255, .25);
     --secondary-colour-shadow: rgb(255, 255, 255, .1036);
     --secondary-colour-number: rgb(255, 255, 255, .25);
+    --secondary-colour-function: rgb(255, 255, 255, .4951);
     --button-foreground: var(--primary-background);
     --button-background: var(--secondary-colour);
     --primary-border-colour: #383b4b;
