Styled crew page adaptations for medium-sized screens

--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -52,6 +52,7 @@
         --body-line-height: calc(2.8 / 1.6);
         --article-title-text: 2rem;
         --article-title-letter-spacing: .338rem;
+        --article-subtitle-text: 4rem;
         --highlight-text: 2rem;
         --highlight-letter-spacing: .338rem;
         // --title-medium-text: 3.2rem;
