--- a/sass/layout/_layout.scss
+++ b/sass/layout/_layout.scss
@@ -1,8 +1,20 @@
 @charset "utf-8";
+@use "sass:list";
 @use "../base/mixins" as *;
 
 /** @section General layout */
 
+@mixin body-backgrounds ($screen-type) {
+    $templates: (home, destination, crew, technology);
+    $screen-types: (mobile, tablet, desktop);
+    @if list.index($screen-types, $screen-type) {
+        @each $template in $templates {
+            &.#{$template} {
+                background-image: url("images/background-#{$template}-#{$screen-type}.jpg");
+            }
+        } 
+    }
+}
 body {
     color: var(--primary-colour);
     background-color: var(--primary-background);
@@ -15,13 +27,10 @@ body {
     min-height: 100vh;
     padding: 2.4rem;
     box-sizing: border-box;
+    @include body-backgrounds (mobile);
     &.home {
-        background-image: url("images/background-home-mobile.jpg");
         gap: 4.8rem;
         padding-bottom: 4.8rem;
-    }
-    &.destination {
-        background-image: url("images/background-destination-mobile.jpg");
     }
 }
 #menu {
@@ -43,14 +52,11 @@ body {
             / 4.8rem 1fr;
         gap: 4rem;
         padding: 0 0 6.2rem 3.85rem;
+        @include body-backgrounds (tablet);
         &.home {
-            background-image: url("images/background-home-tablet.jpg");
             row-gap: 10.6rem;
             column-gap: inherit;
             padding-bottom: 9rem;
-        }
-        &.destination {
-            background-image: url("images/background-destination-tablet.jpg");
         }
     }
     #header {
@@ -71,13 +77,10 @@ body {
     body {
         gap: 7.6rem normal;
         padding: 4rem 0 9.4rem 5.5rem;
+        @include body-backgrounds (desktop);
         &.home {
-            background-image: url("images/background-home-desktop.jpg");
             row-gap: 25.1rem;
             padding-bottom: 13.1rem;
-        }
-        &.destination {
-            background-image: url("images/background-destination-desktop.jpg");
         }
     }
     #content {
