Styled crew adaptations for wide screens

--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -67,6 +67,7 @@
         --body-line-height: calc(3.2 / 1.8);
         --article-title-text: 2.8rem;
         --article-title-letter-spacing: .472rem;
+        --article-subtitle-text: 5.6rem;
         --highlight-text: 2.8rem;
         --highlight-letter-spacing: .475rem;
         // --title-medium-text: 3.2rem;
