Styled technology page adaptations for small screens

--- a/sass/layout/_article.scss
+++ b/sass/layout/_article.scss
@@ -49,6 +49,10 @@ article {
         h2 {
             font-size: var(--article-subtitle-text);
             margin-bottom: 1.6rem;
+            span {
+                display: block;
+                margin-bottom: .8rem;
+            }
         }
         dl {
             margin-top: 3.2rem;
@@ -82,9 +86,26 @@ article {
                 span {
                     font-size: 1.6rem;
                     color: var(--secondary-colour-function);
-                    display: block;
-                    margin-bottom: .8rem;
                 }
+            }
+        }
+        .technology & {
+            h2 {
+                span {
+                    font-size: var(--definition-text);
+                    font-family: var(--condensed-font);
+                    letter-spacing: var(--definition-letter-spacing);
+                    color: var(--primary-colour);
+                }
+            }
+            picture {
+                margin-right: -2.4rem;
+                margin-bottom: 10rem;
+                margin-left: -2.4rem;
+            }
+            img {
+                width: 100vw;
+                object-fit: cover;
             }
         }
     }
