--- a/sass/layout/_layout.scss
+++ b/sass/layout/_layout.scss
@@ -82,6 +82,9 @@ body {
             row-gap: 25.1rem;
             padding-bottom: 13.1rem;
         }
+        &.technology {
+            padding-bottom: 10.1rem;
+        }
     }
     #content {
         margin-right: 16.3rem;
