--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -13,6 +13,7 @@
         wide-menu: 997,
         multicol-home-content: 1120,
         multicol-article: 1182,
+        wide-technology-multicol-article: 1280,
         wide-destination-multicol-article: 1327,
         wide-multicol-stats: 1390
     )
