--- a/sass/layout/_slider.scss
+++ b/sass/layout/_slider.scss
@@ -108,11 +108,12 @@
     .technology & {
         margin: 0 -2.4rem;
         .slider-navigation {
+            --position: calc(20.4 / 37.5 * 100vw);
             font-size: 1.6rem;
             font-family: var(--serif-font);
             letter-spacing: .1rem;
             color: var(--secondary-colour);
-            top: calc(20.4 / 37.5 * 100vw);
+            top: var(--position);
             a {
                 display: inline-flex;
                 justify-content: center;
@@ -143,10 +144,53 @@
         }
     }
     @include css-media-queries ($from-breakpoint: horizontal-menu) {
+        --full-width-image-container-margin: 0 -3.85rem;
+        --full-width-image-card-margin: 0 3.85rem;
+        --full-width-image-card-basis: calc(100vw - 7.7rem - 11.8rem);
+        padding-bottom: 0;
+        margin: var(--full-width-image-container-margin);
+        .cards {
+            --card-width: 100vw;
+            .card {
+                flex-basis: var(--full-width-image-card-basis);
+                margin: var(--full-width-image-card-margin);
+            }
+        }
         .destination & {
             .slider-navigation {
                 font-size: 1.6rem;
                 letter-spacing: .27rem;
+                top: 35.3rem;
+            }
+        }
+        .crew & {
+            padding-bottom: 0;
+            .cards {
+                .card {
+                    display: grid;
+                    grid-template-rows: repeat(2, auto) 1fr;
+                    picture {
+                        align-self: flex-end;
+                    }
+                }
+            }
+        }
+        .technology & {
+            padding-bottom: 3.5rem;
+            margin: var(--full-width-image-container-margin);
+            .slider-navigation {
+                --position: calc(36.6 / 76.8 * 100vw);
+                font-size: 2.4rem;
+                letter-spacing: .15rem;
+                a {
+                    width: 6rem;
+                }
+            }
+            .cards {
+                .card {
+                    flex-basis: var(--full-width-image-card-basis);
+                    margin: var(--full-width-image-card-margin);
+                }
             }
         }
     }
