Styled slider on wide screens

--- a/sass/layout/_article.scss
+++ b/sass/layout/_article.scss
@@ -231,6 +231,14 @@ article {
                 }
             }
         }
+        .js.crew & {
+            display: flex;
+            flex-direction: column;
+            min-height: calc(100vh - 21.2rem);
+            h1 {
+                margin-bottom: 0;
+            }
+        }
         .technology & {
             .card {
                 picture {
